# arch-rogue

./: .gitignore  AGENTS.md  Arch Rogue log 59d8d3c4bd16.txt  Arch Rogue log 8e29dad1d6f6.txt  Arch Rogue log ca56bec16a43.txt  CHANGELOG.md  LICENSE  NOTICE  README.md  SKILLS.md  buildozer.spec  gen_icon_assets.py  pygbag.ini  pyproject.toml
.github/workflows/: build-release.yml  deploy-server.yml
android/: release-signing-cert.sha256
android/recipes/pygame/: __init__.py  modern-setuptools-spawn.patch
docs/: android-beta.md  multiplayer.md  server-deployment.md
server/: __init__.py  config.py  protocol.py  pyproject.toml  room.py  server.py
server/deploy/: arch-rogue-server.service  probe_port.py
src/: main.py
src/arch_rogue/: __init__.py  __main__.py  audio.py  camera.py  combat.py  constants.py  content.py  dungeon.py  game.py  icon.py  input.py  interactions.py  inventory.py  licenses.py  lighting.py  menus.py  mobile.py  models.py  npc_runtime.py  options.py  population.py  quest_assets.py  rendering.py  run_flow.py  save_system.py  shop.py  sprite_assets.py  sprites.py  story.py  story_runtime.py  text_input.py  ui_assets.py
src/arch_rogue/assets/: __init__.py  quest_cutscenes.json
src/arch_rogue/assets/sprites/: manifest.json  ui_manifest.json
src/arch_rogue/combat/: __init__.py  _utils.py  aim.py  ambush_bell.py  attacks.py  class_skills.py  costs.py  damage.py  damage_types.py  disciplines.py  enemies.py  equipment.py  familiars.py  mobility.py  movement.py  player.py  projectiles.py  statuses.py  story_hooks.py
src/arch_rogue/content/: __init__.py  archetypes.py  definitions.py  difficulty.py  enemies.py  equipment.py  interactables.py  progression.py  story_corpus.py
src/arch_rogue/menus/: __init__.py  base.py  character.py  controls.py  inventory.py  mp.py  options.py  state_overlay.py  title.py
src/arch_rogue/net/: __init__.py  client.py  messages.py  mixin.py  protocol.py  sync.py
src/arch_rogue/rendering/: __init__.py  actors.py  base.py  effects.py  hud.py  lighting.py  story_overlays.py  world.py
src/arch_rogue/sprites/: __init__.py  library.py  procedural.py  ui_assets.py
src/arch_rogue/story/: __init__.py  engine.py  npc_runtime.py  runtime.py
src/arch_rogue_protocol/: __init__.py  wire.py
tests/: test_1_0_public_release.py  test_1_2_systems_polish.py  test_2_0_story_mode.py  test_2_1_graphics_animation.py  test_2_2_combat_skills_loot.py  test_2_3_run_structure_bosses_replayability.py  test_2_4_dark_levels.py  test_2_5_general_cleanup.py  test_2_5_hud_polish.py  test_3_0_shops_allies.py  test_3_11_cutscene_cleanup.py  test_3_13_special_rooms.py  test_3_14_special_room_flavors.py  test_3_15_summons.py  test_3_16_lighting_overhaul.py  test_3_17_ambush_bell.py  test_3_18_time_skip.py  test_3_2_skill_tree.py  test_3_3_skill_points.py  test_3_4_story_cutscene_pipeline.py  test_3_5_movement_animation_polish.py  test_3_6_affix_builds.py  test_3_6_dungeon_sprite_variants.py  test_3_7_skill_path_variability.py  test_3_8_graphics.py  test_3_9_big_bosses.py  test_3_9_input_accessibility.py  test_4_0_asset_sprites.py  test_4_1_1_ui_refinements.py  test_4_1_asset_ui.py  test_ambush_bell.py  test_android_lifecycle.py  test_android_packaging.py  test_archetypes_options_and_difficulty.py  test_audio_music_timing.py  test_beta_milestone.py  test_boss_encounters.py  test_class_skills_speeds_and_crit.py  test_combat_damage_and_loot_tables.py  test_combat_phase4_batch_a.py  (+58 more)
tools/: build_android.sh  generate_download_manifest.py  profile_adb_live.py  profile_game.py  validate_android_apk.py
tools/baselines/: desktop_master_baseline.json
web/: README.md  build.py  main.py  server.py  vendor_runtime.py
website/: README.md  app.js  downloads.json  index.html  styles.css
