[project]
name = "arch-rogue"
version = "3.19.3"
description = "3.19.0 renames the 'slot 3 skill' concept to 'class skill' throughout the codebase. The shared budget (mana cost, cooldown, timer) is renamed from nova_* to class_skill_*, and the dispatch is data-driven via a class-skill registry. Nova-specific implementation (player_cast_nova, nova_damage_type) is preserved as one class-skill variant."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "pygame-ce>=2.5.0",
]

[project.optional-dependencies]
# Build-time only: packaging the game for the web via Pyodide/WASM.
web = [
    "pygbag",
]

[project.scripts]
arch-rogue = "arch_rogue.game:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
arch_rogue = ["assets/*.json", "assets/icons/*.png"]
