[project]
name = "arch-rogue"
version = "4.1.22"
description = "A grim isometric action roguelike with asset-backed sprites, menus, and HUD, procedural legacy graphics, and replayable dungeon runs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "pygame-ce>=2.5.0",
]

[project.optional-dependencies]
# Build-time only: packaging the game for the web via Pyodide/WASM.
web = [
    "pygbag",
]

[project.scripts]
arch-rogue = "arch_rogue.game:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
arch_rogue = [
    "assets/*.json",
    "assets/icons/*.png",
    "assets/sprites/*.json",
    "assets/sprites/actors/*/rotations/*.png",
    "assets/sprites/actors/*/animations/*/*/*.png",
    "assets/sprites/items/*.png",
    "assets/sprites/props/*.png",
    "assets/sprites/world/*.png",
    "assets/sprites/menus/*.png",
    "assets/sprites/hud/*.png",
]
